--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 jdbc.url=jdbc:mysql://localhost:3306/monitorsensors
 driverClass=com.mysql.cj.jdbc.Driver
 database.user.name=root
-database.user.password=Pivzik12qw
+database.user.password=
 
 hibernate.packagesToScan=com.monitor_sensors.core.domain
 hibernate.show_sql=true
