--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,16 @@
+#PostgreSQL
+#SpringCoreConfiguration
 jdbc.url=jdbc:postgresql://localhost:5432/monitorsensors
 driverClass=org.postgresql.Driver
 database.user.name=postgres
 database.user.password=
 
-hibernate.packagesToScan=com.monitor_sensors.core.domain
-hibernate.show_sql=true
-hibernate.hbm2ddl.auto=validate
-hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-
+#MySQL
+#SpringCoreConfiguration
 #jdbc.url=jdbc:mysql://localhost:3306/monitorsensors
 #driverClass=com.mysql.cj.jdbc.Driver
 #database.user.name=root
 #database.user.password=
-#
-#hibernate.packagesToScan=com.monitor_sensors.core.domain
-#hibernate.show_sql=true
-#hibernate.hbm2ddl.auto=validate
-#hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#DataBaseIT
+sql.script.file.path=/Users/alexandrkozhekin/Documents/IntaliIDEA/Monitor_Sensors/src/test/database_scripts/dbInsertScript
